[package]
name = "pcap_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]


[dependencies]
anyhow = "1.0"
# pcap = "1.0"
pnet = {version = "0.33",  default-features = false, features = ["ipnetwork"]}
# postgres = "0.19"
# kafka = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"