[package]
name = "pcap_producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "produce_parsed"
path = "bin/producer.rs"

[dependencies]
anyhow = "1.0"
pcap = "1.0"
kafka = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pnet = "0.33"